third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/bool/starting-same-true.stderr
TOML parse error at line 1, column 31
  |
1 | starting-same-true      = truer
  |                               ^
expected newline, `#`
